# hawthorne

./: .gitignore  Cargo.toml
src/: lib.rs
src/bridge/: card.rs  contract.rs  game.rs  gamestate.rs  gamestate_sampler.rs  hand.rs  mod.rs  old_game.rs  player_info.rs  seat.rs
src/cfr/: mod.rs
src/cfr/game_model/: gamestate_sampler.rs  mod.rs  oracle_gamestate.rs  strategy.rs  utility.rs  visible_info.rs
src/cfr/strategy_generation/: accumulate_regret.rs  counterfactual_workspace.rs  mod.rs  regret.rs  strategy.rs  strategy_generator.rs  update_strategy.rs
src/cfr/strategy_generation/cfr_algorithm_impl/: accumulate_regret.rs  mod.rs
src/cfr/strategy_generation/workspace_data/: batch_item_data.rs  data_for_infoset.rs  data_for_known_infosets.rs  data_for_move.rs  mod.rs  move_data.rs  timestamp.rs
src/old_cfr/: cfr.rs  counterfactual.rs  mod.rs  regret.rs
src/tic_tac_toe/: mod.rs
